@@ -1,3 +1,4 @@
+1.3.25-0 @01/02/2010 17:05:00 UTC@
 1.3.24-0 @10/17/2009 23:40:00 UTC@
 1.3.23-0 @07/31/2009 17:15:00 UTC@
 1.3.22-0 @04/19/2009 13:25:00 UTC@
