@@ -1,5 +1,11 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jan-02-2010 patrick     Added public virtual methods
+                        gadget::InputArea::lockMouse() and
+                        gadget::InputArea::unlockMouse() so that code that gets
+                        a gadget::InputArea reference can programatically lock
+                        and unlock the mouse pointer.
+                        NEW VERSION: 1.3.25
 Oct-17-2009 patrick     Added consumed state tracking to gadget::Event.
                         NEW VERSION: 1.3.24
 Jul-31-2009 patrick     The gadget::InputArea creating a gadget::Event is now
